name:                commander
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jsdw/hs-commander
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          me@unbui.lt
copyright:           2016 James Wilson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -fno-warn-type-defaults
                       -fno-warn-orphans
  exposed-modules:     Commander
                     , Commander.Commands
                     , Commander.Params
  build-depends:       base
                     , containers
                     , transformers
                     , mtl
  default-language:    Haskell2010

test-suite commander-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , commander
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsdw/hs-commander
